Fixed: - restore tasks, service sometimes kill itself -if order was with the alarm and cancelling has failed, it not be deleted from the task list -new order alarm logic -keys for assistTradeApi can be changed from the profile screen -trade message -check order crash -autostart set the Assist frequency -widget bottom border
Added:
- new icon for executed alarms
- child text size
- fuse against accidental trade
- additional buttons for trade activity

--- a/app/src/main/res/layout-large-land/activity_trade.xml
+++ b/app/src/main/res/layout-large-land/activity_trade.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Gray2" >
+    android:background="@color/Gray2">
 
     <RelativeLayout
         android:id="@+id/tradeTopLayout"
@@ -14,13 +14,24 @@
         android:layout_marginTop="7dp"
         android:background="@drawable/shadow_background"
         android:paddingLeft="@dimen/large_horizontal_trade_margin"
-        android:paddingRight="@dimen/large_horizontal_trade_margin" >
+        android:paddingRight="@dimen/large_horizontal_trade_margin">
+
+        <ToggleButton
+            android:id="@+id/tradeSwitchButton"
+            android:layout_width="80dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/high_margin"
+            android:background="@drawable/trade_switch_selector"
+            android:textOff=""
+            android:textOn="" />
 
         <TextView
             android:id="@+id/tradeMyFundsName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/high_margin"
             android:maxLines="1"
             android:textSize="17sp"
@@ -36,39 +47,102 @@
             android:layerType="software"
             android:src="@drawable/spannable" />
 
-        <EditText
-            android:id="@+id/tradeAmountEdit"
+        <LinearLayout
+            android:id="@+id/tradeAmountGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tradeMyFundsName"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/high_margin"
-            android:ellipsize="end"
-            android:ems="10"
-            android:gravity="center_horizontal"
-            android:hint="@string/amount"
-            android:inputType="numberDecimal"
-            android:textStyle="bold" >
-        </EditText>
-
-        <EditText
-            android:id="@+id/tradePriceEdit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tradeAmountEdit"
-            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/tradeSwitchButton"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/med_margin"
-            android:ellipsize="end"
-            android:ems="10"
-            android:gravity="center_horizontal"
-            android:hint="@string/price"
-            android:imeOptions="actionDone"
-            android:inputType="numberDecimal"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/tradeAmountClearButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/trade_clear_selector" />
+
+            <EditText
+                android:id="@+id/tradeAmountEdit"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:ems="10"
+                android:gravity="center_horizontal"
+                android:hint="@string/amount"
+                android:inputType="numberDecimal"
+                android:textStyle="bold" />
+
+            <ImageButton
+                android:id="@+id/tradeAmountMinusButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:background="@drawable/trade_minus_selector" />
+
+            <ImageButton
+                android:id="@+id/tradeAmountPlusButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:background="@drawable/trade_plus_selector" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/tradePriceGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tradeAmountGroup"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/med_margin"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/tradePriceClearButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/trade_clear_selector" />
+
+            <EditText
+                android:id="@+id/tradePriceEdit"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:ems="10"
+                android:gravity="center_horizontal"
+                android:hint="@string/price"
+                android:imeOptions="actionDone"
+                android:inputType="numberDecimal"
+                android:textStyle="bold" />
+
+            <ImageButton
+                android:id="@+id/tradePriceMinusButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:background="@drawable/trade_minus_selector" />
+
+            <ImageButton
+                android:id="@+id/tradePricePlusButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:background="@drawable/trade_plus_selector" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tradeTotalName"
@@ -92,7 +166,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/tradePriceEdit"
+            android:layout_below="@id/tradePriceGroup"
             android:layout_marginRight="@dimen/high_margin"
             android:layout_marginTop="@dimen/standard_margin"
             android:maxLength="40"
@@ -134,7 +208,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tradeFeeValue"
             android:layout_marginTop="@dimen/standard_margin"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/tradeLeftButton"
@@ -198,7 +272,6 @@
         android:background="@color/Gray3"
         android:cacheColorHint="#00000000"
         android:scrollingCache="false"
-        android:smoothScrollbar="true" >
-    </ListView>
+        android:smoothScrollbar="true"></ListView>
 
 </RelativeLayout>
