--- a/app/src/main/res/layout/item_mytrans_child_list.xml
+++ b/app/src/main/res/layout/item_mytrans_child_list.xml
@@ -14,7 +14,8 @@
         android:layout_marginLeft="@dimen/standard_margin"
         android:layout_marginRight="@dimen/standard_margin"
         android:textColor="@color/Black90"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/itemMyTransChildTimeName"
