--- a/app/src/main/res/layout-large-land/fragment_ticker.xml
+++ b/app/src/main/res/layout-large-land/fragment_ticker.xml
@@ -6,11 +6,11 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginLeft="@dimen/large_horizontal_ticker_margin"
         android:layout_marginRight="@dimen/large_horizontal_ticker_margin"
         android:layout_marginTop="@dimen/high_margin"
-        android:background="@color/Gray0"
+        android:background="@drawable/shadow_background"
         android:paddingLeft="@dimen/large_horizontal_ticker_margin"
         android:paddingRight="@dimen/large_horizontal_ticker_margin" >
 
@@ -46,7 +46,7 @@
         android:layout_marginLeft="@dimen/large_horizontal_ticker_margin"
         android:layout_marginRight="@dimen/large_horizontal_ticker_margin"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:background="@color/Gray0"
+        android:background="@drawable/shadow_background"
         android:paddingLeft="@dimen/large_horizontal_ticker_margin"
         android:paddingRight="@dimen/large_horizontal_ticker_margin" >
 
