--- a/app/src/main/res/layout/fragment_ticker.xml
+++ b/app/src/main/res/layout/fragment_ticker.xml
@@ -2,15 +2,15 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/Gray2"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginLeft="@dimen/avg_margin"
         android:layout_marginRight="@dimen/avg_margin"
         android:layout_marginTop="@dimen/avg_margin"
-        android:background="@color/Gray0" >
+        android:background="@drawable/shadow_background">
 
         <TextView
             android:id="@+id/tickerTextDiv"
@@ -27,7 +27,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/min_margin"
-            android:layout_toLeftOf="@id/tickerTextDiv" />
+            android:layout_toLeftOf="@id/tickerTextDiv"
+            android:layout_alignParentBottom="false"
+            android:layout_alignParentTop="false" />
 
         <Spinner
             android:id="@+id/tickerSpinnerRight"
@@ -41,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/avg_margin"
-        android:background="@color/Gray0" >
+        android:background="@drawable/shadow_background">
 
         <TextView
             android:id="@+id/tickerLastName"
@@ -165,7 +167,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tickerVolumeValue"
             android:layout_marginTop="@dimen/avg_margin"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/tickerBuyButton"
@@ -193,13 +195,13 @@
 
     <com.androidplot.xy.XYPlot
         android:id="@+id/mySimpleXYPlot"
+        androidPlot.graphWidget.marginBottom="20dp"
+        androidPlot.graphWidget.marginLeft="@dimen/avg_margin"
+        androidPlot.graphWidget.marginTop="@dimen/standard_margin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/avg_margin"
         android:layout_marginLeft="@dimen/avg_margin"
-        android:layout_marginRight="@dimen/avg_margin"
-        androidPlot.graphWidget.marginBottom="20dp"
-        androidPlot.graphWidget.marginLeft="@dimen/avg_margin"
-        androidPlot.graphWidget.marginTop="@dimen/standard_margin" />
+        android:layout_marginRight="@dimen/avg_margin" />
 
 </LinearLayout>
