--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -3,7 +3,7 @@
     android:id="@+id/widgetLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/widget_margin" >
+    android:layout_margin="@dimen/widget_margin">
 
     <ImageView
         android:id="@+id/widgetImageView"
@@ -21,11 +21,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-1dp">
 
             <TextView
                 android:id="@+id/widgetTime"
@@ -49,7 +50,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/DarkSlateBlue"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:layout_marginTop="-1dp">
 
             <TextView
                 android:id="@+id/widgetName1"
@@ -95,7 +97,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:layout_marginTop="-1dp">
 
             <TextView
                 android:id="@+id/widgetValue1"
@@ -143,7 +146,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/DarkSlateBlue"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:layout_marginTop="-1dp">
 
             <TextView
                 android:id="@+id/widgetName6"
@@ -189,7 +193,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:layout_marginTop="-1dp">
 
             <TextView
                 android:id="@+id/widgetValue6"
