--- a/app/src/main/res/values-land/styles.xml
+++ b/app/src/main/res/values-land/styles.xml
@@ -15,7 +15,7 @@
         <item name="android:textColor">@color/DarkSlateBlue</item>
         <item name="android:textStyle">bold</item>
         <item name="android:singleLine">true</item>
-        <item name="android:textSize">10sp</item>
+        <item name="android:textSize">11sp</item>
     </style>
 
     <style name="WidgetTextTime">
@@ -26,10 +26,10 @@
     </style>
 
     <style name="WidgetTextNameStyle">
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColor">@color/Gray0</item>
         <item name="android:textStyle">bold</item>
         <item name="android:maxLines">1</item>
-        <item name="android:textSize">10sp</item>
+        <item name="android:textSize">11sp</item>
     </style>
 
 </resources>
