--- a/app/src/main/res/layout/widget_half.xml
+++ b/app/src/main/res/layout/widget_half.xml
@@ -3,25 +3,28 @@
     android:id="@+id/widgetHalfLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/widget_margin" >
+    android:layout_margin="@dimen/widget_margin">
 
     <ImageView
         android:id="@+id/widgetHalfImageView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:scaleType="fitXY"
+        android:layout_alignBottom="@+id/widgetHalfMainLinearLayout"
         android:src="@drawable/widget_background" />
 
     <Button
         android:id="@+id/widgetHalfButton"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignBottom="@+id/widgetHalfMainLinearLayout"
         android:background="@null" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:id="@+id/widgetHalfMainLinearLayout"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
