--- a/app/src/main/res/layout-normal-land/activity_trade.xml
+++ b/app/src/main/res/layout-normal-land/activity_trade.xml
@@ -214,7 +214,17 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/tradeLeftButton"
+                android:id="@+id/tradeSpecialButton"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:background="@drawable/just_selector"
+                android:padding="@dimen/med_margin"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/tradeDefaultButton"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_weight="1"
@@ -223,15 +233,6 @@
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/tradeRightButton"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_weight="1"
-                android:background="@drawable/just_selector"
-                android:padding="@dimen/med_margin"
-                android:textSize="14sp"
-                android:textStyle="bold" />
         </LinearLayout>
     </RelativeLayout>
 
